# oura-ai-dashboard

./: .gitignore  .pre-commit-config.yaml  Makefile
.github/workflows/: ci.yml
oura-ai/: README.md  pyproject.toml  run_backend.sh
oura-ai/backend/: Makefile  config.py  deps.py  main.py  models.py
oura-ai/backend/tests/: test_main.py
oura-ai/frontend/: Makefile  package.json  pnpm-lock.yaml
oura-ai/frontend/src/: App.css  App.tsx
oura-ai/frontend/src/api/: oura.ts
oura-ai/frontend/src/components/: Card.tsx  DataDisplay.tsx  EndpointSelector.tsx
